# openldev

./: AUTHORS  ChangeLog  Doxyfile  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  configure  configure.ac  openldev.1  openldev.desktop  openldev.dev
glade/: Makefile.am  Makefile.in  environment.glade  importproject.glade  newfile.glade  projectinfo.glade  projectproperties.glade  replace.glade  tip.glade
menus/: Makefile.am  Makefile.in  mainmenu.ui  popup_menus.ui  toolbar.ui
openldev/: Makefile.am  Makefile.in  main.cc  openldev-auto-complete.cc  openldev-auto-complete.h  openldev-build.cc  openldev-build.h  openldev-edit.cc  openldev-edit.h  openldev-file.cc  openldev-file.h  openldev-gconf.cc  openldev-gconf.h  openldev-help.cc  openldev-help.h  openldev-menu-callbacks.h  openldev-plugin-engine.cc  openldev-plugin-engine.h  openldev-plugin.cc  openldev-plugin.h  openldev-printing.cc  openldev-printing.h  openldev-project.cc  openldev-project.h  openldev-tools.cc  openldev-tools.h  openldev-utils.cc  openldev-utils.h  openldev-view.cc  openldev-view.h  openldev.cc  openldev.h
openldev/launcher/: Makefile.am  Makefile.in  main.cc
openldev/openldev-dialogs/: Makefile.am  Makefile.in  openldev-about.cc  openldev-about.h  openldev-environment.cc  openldev-environment.h  openldev-import-project.cc  openldev-import-project.h  openldev-input.cc  openldev-input.h  openldev-new-file.cc  openldev-new-file.h  openldev-new-project.cc  openldev-new-project.h  openldev-project-info.cc  openldev-project-info.h  openldev-project-settings.cc  openldev-project-settings.h
openldev/openldev-settings/: Makefile.am  Makefile.in  openldev-editor.cc  openldev-editor.h  openldev-makefile-parser.cc  openldev-makefile-parser.h  openldev-project.cc  openldev-project.h  openldev-settings.cc  openldev-settings.h  openldev-xml-parser.cc  openldev-xml-parser.h
openldev/openldev-widgets/: Makefile.am  Makefile.in  openldev-file-browser.cc  openldev-file-browser.h  openldev-file-manager.cc  openldev-file-manager.h  openldev-file-tab.cc  openldev-file-tab.h  openldev-find-toolbar.cc  openldev-find-toolbar.h  openldev-goto-line-toolbar.cc  openldev-goto-line-toolbar.h  openldev-menu.cc  openldev-menu.h  openldev-output-build.cc  openldev-output-build.h  openldev-output-manager.cc  openldev-output-manager.h  openldev-output-search.cc  openldev-output-search.h  openldev-output-terminal.cc  openldev-output-terminal.h  openldev-sidebar.cc  openldev-sidebar.h  openldev-status-bar.cc  openldev-status-bar.h
pixmaps/: Makefile.am  Makefile.in
plugins/: Makefile.am  Makefile.in
plugins/insert-info/: Makefile.am  Makefile.in  insert-info.cc  insert-info.h  insertinfo.plugin  inserttimedate.glade
plugins/makefile-editor/: Makefile.am  Makefile.in  makefile-editor-add.cc  makefile-editor-add.h  makefile-editor-edit.cc  makefile-editor-edit.h  makefile-editor.cc  makefile-editor.h  makefileeditor.plugin  mfeditor-add.glade  mfeditor-prefix.glade  mfeditor-script.glade  mfeditor-subproject.glade  mfeditor-target.glade  mfeditor-variable.glade
templates/: Makefile.am  Makefile.in
templates/console-c/: Makefile.am  Makefile.in  console-c.pl
templates/console-cxx/: Makefile.am  Makefile.in  console-cxx.pl
templates/gtk/: Makefile.am  Makefile.in  gtk.pl
