SUBDIRS = \
	glade\
	menus\
	openldev\
	pixmaps\
	plugins\
	templates

openldevdocdir = \
	$(prefix)/share/doc/openldev

openldevdoc_DATA = \
	README\
	COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS\
	TODO

openldevdesktopdir = \
	$(prefix)/share/applications

openldevdesktop_DATA = \
	openldev.desktop

openldevmandir = \
	$(prefix)/share/man/man1

openldevman_DATA = \
	openldev.1

EXTRA_DIST = \
	$(openldevdoc_DATA)\
	$(openldevdesktop_DATA)\
	$(openldevman_DATA)

