openldevpixmapdir = \
	$(prefix)/share/pixmaps/openldev

openldevpixmap_DATA = \
	build.png\
	build_sm.png\
	compile.png\
	compile_sm.png\
	newproject.png\
	openldev24.png\
	openldev48.png\
	openldev96.png\
	projectinfo.png\
	splash.png\
	error.png\
	warning.png\
	info.png

EXTRA_DIST = \
	$(openldevpixmap_DATA)

